logOutput-pingpong/manifests/logOutput/deployment_logOutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: config
          configMap:
            name: logoutput-config
      containers:
        - name: logoutput
          image: LOGOUTPUT/IMAGE
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /
              port: 5000
          volumeMounts:
            - name: config
              mountPath: /usr/src/app/config
              readOnly: true
