logOutput-pingpong/manifests/logOutput/service_logOutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345 # Listens to this port.
      protocol: TCP
      targetPort: 5000 # Sends all traffic to this port.
