logOutput-pingpong/manifests/logOutput/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: logoutput-route'
  namespace: exercises
spec:
  parentRefs:
    - name: logoutput-pingpong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: logoutput-svc
          port: 2345
